<resources>
    <string name="app_name">GFA-note
    </string>
    <string name="note">My note</string>
    <string name="login_slang">M3A Analytics</string>
    <string name="app_name2">UMUA c-report</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_create_account">No account yet? Create one</string>
    <string name="login_member">Already a member? Login</string>
    <string name="owner_name">Nik-Name</string>
    <string name="country">Sity</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create_account">Create account</string>
    <string name="please_agree">Please agree to the Terms of Use and Privacy Policy</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="communicate">Connect</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="info">Info</string>
    <string name="share_body">Share</string>
    <string name="share_by">Share content</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_item">Delete</string>
    <string name="title_long">Чтобы идти свидетельствовать, вы должны хорошо изучить Принцип, проливать слезы и проявить полную посвященность. (20:345)</string>
    <string name="t">This is a long title text displayed in multiple lines.</string>
    <string name="info_view"><b>What is MVP Design Pattern?</b>\nModel View Presenter is an architectural pattern used to encourage/facilitate separation of concern in software projects.
\n\nMVP improves application architecture and facilitate unit testing.
\n\nMVP Architecture in Android separates business logic from view (activities/ fragments/custom views) through the presenter.
\n\n<b>The Model:</b>
\nModel layer is used to provide data to populate user interface.
\n\nBased on the business logic Model layer can provide required data from Network (through API call), from Application Shared Preferences or from SQLite Database.
\n\nModel layer cannot directly communicate with View. Although it has to provide data to the View (UI) but it will do so through presenter layer.</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Click here</string>
    <string name="topic">Topic</string>
    <string name="result">Result</string>
    <string name="res">Res.</string>
    <string name="goal">Goal</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dp_read">DP read</string>
    <string name="name">Name</string>
    <string name="period">Period</string>
    <string name="period_text">Period</string>
    <string name="zero">0</string>
    <string name="number">Number</string>
    <string name="start_data">Start Data</string>
    <string name="end_data">End data</string>
    <string name="time">Quantity</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="min">Min</string>
    <string name="minute">min</string>
    <string name="start_time">start_per</string>
    <string name="end_time">end_per</string>
    <string name="probel"> - </string>
    <string name="city">City</string>
    <string name="signup_successful">Registration successful</string>
    <string name="incorrect_sing_in">Incorrect email or password. Please try again.</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="group">Group</string>
    <string name="no_name">This field cannot be blank</string>
    <string name="no_email">This field cannot be blank</string>
    <string name="email_incorrect">Email incorrect</string>
    <string name="email_exist">This email already exist</string>
    <string name="no_password">This field cannot be blank</string>
    <string name="password_too_short">The password too short</string>
    <string name="repassword_wrong">This password value don`t compile with password</string>
    <string name="checkbox_gdpr">Please agree to the Terms of Use and Privacy Policy</string>
    <string name="no_internet">No internet connection</string>
    <string name="registration">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="mobile">mobile</string>
    <string name="owner">owner</string>
    <string name="notification">notification</string>
    <string name="optional_settings">Optional settings</string>
    <string name="save">Save</string>
    <string name="data">Date</string>
    <string name="streat_time">Time on street</string>
    <string name="introdaction">Introduction</string>
    <string name="approach">Approach</string>
    <string name="lecture_on_streat">Lectures on street</string>
    <string name="lecture_in_centre">Lectures in center</string>
    <string name="one_day_seminar">1-day WS</string>
    <string name="two_day_seminar">2-day WS</string>
    <string name="day21_seminar">21-day WS</string>
    <string name="kyiv">Kyiv</string>
    <string name="kharkiv">Kharkiv</string>
    <string name="lecture_on_streat_main">Street lect.</string>
    <string name="lecture_in_centre_main">Center lect.</string>
    <string name="result_chondo">Add result</string>
    <string name="add_weekly_result">Add weekly result</string>
    <string name="lviv">Lviv</string>
    <string name="dnepr">Dnepr</string>
    <string name="zhytomyr">Zhitomir</string>
    <string name="odessa">Odessa</string>
    <string name="chernigov">Chernigov</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hour">Hour</string>
    <string name="quarter">Quarter</string>
    <string name="common_result">Common Result</string>
    <string name="individual_result">Individual Result</string>
    <string name="ind_list_is_empty">Individual result list is empty</string>
    <string name="each_center_result">Center</string>
    <string name="just_now">Just now</string>
    <string name="ago">ago</string>
    <string name="intro">Intr.</string>
    <string name="delete_item_card_title">Delete item</string>
    <string name="delete_select_item">Are you sure you want to delete selected item?</string>
    <string name="delete">delete</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_message">Are you sure you want to exit?</string>
    <string name="gdpr_checkbox">I understand and agree to UMUA centers report</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="private_policy">Privacy Policy</string>
    <string name="year_goal">Goal of year</string>
    <string name="add_goal">Add goal</string>
    <string name="people_in_nwet">People_in_team</string>
    <string name="month_goal">Goal of month</string>
    <string name="week_goal">Goal of week</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="common_team_result">Go to NWET</string>
    <string name="remain_in_team">Now in NWET</string>
    <string name="one_day_seminar_easy">1-dWS</string>
    <string name="two_day_seminar_easy">2-dWS</string>
    <string name="day21_seminar_easy">21-dWS</string>
    <string name="common_res_and_goal">Common centers result</string>
    <string name="nwet">NWET</string>
    <string name="read_DP_pages">DP ukr.(page)</string>
    <string name="one_day_easy">1-d</string>
    <string name="two_day_easy">2-d</string>
    <string name="day21_easy">21-d</string>
    <string name="day_goal">Goal of day</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="change_team_goals">Are you sure you want to change the overall goal of the center?</string>
    <string name="change_center_team_goals">Are you sure that you want to change the goals of the center?</string>
    <string name="change_goal">Chondo common goal</string>
    <string name="lect_on_streat">Lect. on str.</string>
    <string name="lect_in_centre">Lect. in centr</string>
    <string name="DP_pages">Read DP(kor.)</string>
    <string name="streat_t">Time on street</string>
    <string name="tel_cont">Tel. contact</string>
    <string name="DP_pages_times">Read DP(times)</string>
    <string name="add_all_centers_goal">Add all centers goal</string>
    <string name="add_each_centers_goal">Add each center goal</string>
    <string name="actionizer">Actionaiser</string>
    <string name="change_center_goal">Change center goal</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="select_range">Select period</string>
    <string name="add_individual_goals">Add individual goals</string>
    <string name="individual_goals_and_result">Individual goals and result</string>
    <string name="add_goals_and_result">Add goals and result</string>
    <string name="center_time">Time in center</string>
    <string name="read_DP_kor_pages">DP kor.(page)</string>
    <string name="DP_pages_ukr">Read DP(ukr.)</string>
    <string name="education_material">Edu. material</string>
    <string name="number_of_telephone">Number of phone</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="status">Status</string>
    <string name="lector">Lector</string>
    <string name="my_guests">My guests</string>
    <string name="add_guest">Add guest</string>
    <string name="phone_number">Phone number</string>
    <string name="bestResult">Best result</string>
    <string name="bestHDHResult">Best HDH result</string>
    <string name="mobilisation">Mob.</string>
    <string name="hdh">HDH</string>
    <string name="ss">SS</string>
    <string name="chart">Charts</string>
    <string name="best_centers_chart">Best centers chart</string>
    <string name="update_result">Update result</string>
    <string name="farm">Farm</string>
    <string name="mob">Mob.</string>
    <string name="crh">CRH</string>
</resources>