<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/commonResult"
            android:title="@string/common_result"
            android:icon="@drawable/ic_home_black_24dp"
            />

        <item android:id="@+id/best_result"
            android:title="@string/bestResult"
            android:icon="@drawable/ic_star_border_black_24dp"
            />


        <item android:id="@+id/chart"
            android:icon="@drawable/ic_home"
            android:title="@string/chart"
            />

        <item android:id="@+id/individualResult"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/individual_result"
            />

        <item
            android:id="@+id/add_result"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/result_chondo" />

        <item
            android:id="@+id/add_guest"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/add_guest" />

        <item
            android:id="@+id/add_goal"
            android:icon="@drawable/ic_filter_7_black_24dp"
            android:title="@string/add_all_centers_goal" />

        <item
            android:id="@+id/add_each_centers_goal"
            android:icon="@drawable/ic_filter_1_black_24dp"
            android:title="@string/add_each_centers_goal" />

        <item
            android:id="@+id/add_individual_goals"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/add_individual_goals" />

        <item
            android:id="@+id/my_guests"
            android:icon="@drawable/ic_child_care_black_24dp"
            android:title="@string/my_guests" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />


    </group>

    </menu>