<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_kyiv"
        android:title="@string/kyiv"
        android:icon="@drawable/flag_u"
/>
    <item
        android:id="@+id/menu_kharkiv"
        android:title="@string/kharkiv"
        android:icon="@drawable/flag_u"
        />

    <item
        android:id="@+id/menu_dnepr"
        android:title="@string/dnepr"
        android:icon="@drawable/flag_u"
        />

    <item
        android:id="@+id/menu_zhytomyr"
        android:title="@string/zhytomyr"
        android:icon="@drawable/flag_u"
        />

    <item
        android:id="@+id/menu_lviv"
        android:title="@string/lviv"
        android:icon="@drawable/flag_u"
        />

    <item
        android:id="@+id/menu_odessa"
        android:title="@string/odessa"
        android:icon="@drawable/flag_u"
        />

    <item
        android:id="@+id/menu_chernigov"
        android:title="@string/chernigov"
        android:icon="@drawable/flag_u"/>

</menu>