<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/parent_margin_edge"
        android:paddingRight="@dimen/parent_margin_edge">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_12"
            android:src="@drawable/analytics" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_slang"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_InputLayoutEmail_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_InputLayoutPassword_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8">

            <EditText
                android:id="@+id/input_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/ButtonFillGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_24"
            android:layout_marginTop="@dimen/space_24"
            android:padding="@dimen/space_12"
            android:text="@string/login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/link_signup"
            style="@style/TextStyle_Body2_Link_Color"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/space_24"
            android:gravity="center"
            android:text="@string/go_create_account" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>